[project]
name = "nonebot-plugin-splatoon3-schedule"
version = "2.0.7"
description = "一个基于nonebot2框架的splatoon3游戏日程查询插件"
authors = [{ name = "cypas", email = "ayano05@outlook.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "beautifulsoup4>=4.12.2,<5",
    "cloudscraper>=1.2.71,<2",
    "httpx>=0.28.1,<0.29",
    "nonebot2>=2.4.4,<3",
    "pydantic>=1.0.0,<3.0.0,!=2.5.0,!=2.5.1",
    "Pillow>=11.3.0,<12",
    "playwright>=1.40.0,<2",
    "nonebot-adapter-onebot>=2.4.6,<3",
    "nonebot-adapter-telegram>=0.1.0b20,<0.2",
    "nonebot-adapter-kaiheila>=0.3.4,<0.4",
    "nonebot-adapter-qq>=1.6.7,<2",
    "nonebot-plugin-apscheduler>=0.5.0,<0.6",
    "nonebot_plugin_datastore>=1.3.0,<2",
    "cos_python_sdk_v5>=1.9.30,<2",
    "zhconv>=1.4.3,<2",
]

[dependency-groups]
test = [
    "nonebug>=0.3.5,<0.4",
    "pytest-asyncio>=0.23.5,<0.24",
]

[tool.uv]
default-groups = "all"

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.uv.build-backend]
module-name = ["nonebot_plugin_splatoon3_schedule"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
